API filter, latest, manufacturer & manufacturers
